cmake_minimum_required(VERSION 3.19)
project(las2land LANGUAGES CXX VERSION 0.1)
add_executable(las2land src/main.cpp)
target_compile_definitions(las2land PRIVATE VERSION="${las2land_VERSION}")
target_compile_options(las2land PRIVATE -Wfatal-errors -Wall -Wextra -Wpedantic)
target_compile_features(las2land PRIVATE cxx_std_20)
set_target_properties(las2land PROPERTIES CXX_EXTENSIONS OFF)
install(TARGETS las2land RUNTIME)
install(DIRECTORY man1 TYPE MAN)
install(DIRECTORY bash-completions TYPE DATA)
