cmake_minimum_required(VERSION 3.19)
project(las2poly LANGUAGES CXX VERSION 1.0)
add_executable(las2poly src/main.cpp)
target_compile_definitions(las2poly PRIVATE VERSION="${las2poly_VERSION}")
target_compile_options(las2poly PRIVATE -Wfatal-errors -Wall -Wextra -Wpedantic)
target_compile_features(las2poly PRIVATE cxx_std_20)
set_target_properties(las2poly PROPERTIES CXX_EXTENSIONS OFF)
install(TARGETS las2poly RUNTIME)
install(DIRECTORY man1 TYPE MAN)
install(DIRECTORY bash-completions TYPE DATA)
